# cpp-release-example

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  conanfile.txt
.devcontainer/: conanfile.txt  dev.Dockerfile  devcontainer.json
.github/workflows/: release.yml
app/: CMakeLists.txt
app/db/: CMakeLists.txt
app/db/client/: CMakeLists.txt  main.cpp  tcp_client.cpp  tcp_client.hpp
app/db/server/: CMakeLists.txt  acceptor.cpp  acceptor.hpp  main.cpp  server_base.cpp  server_base.hpp  service.cpp  service.hpp  tcp_server.cpp  tcp_server.hpp
app/gui/: CMakeLists.txt  main.cpp  mainwindow.ui
app/src/: CMakeLists.txt  main.cpp
cmake/: Packing.cmake  PackingShared.cmake  PackingStatic.cmake
debian/: postinst  postrm
lib/: CMakeLists.txt
lib/common/: defaults.hpp  message.hpp  utils.cpp  utils.hpp
lib/fancycli/: CMakeLists.txt
lib/fancycli/include/: client.hpp  reply_processor.hpp
lib/fancycli/src/: client.cpp
lib/fancyser/: CMakeLists.txt
lib/fancyser/include/: db_service.hpp  server.hpp  session.hpp
lib/fancyser/src/: db_service.cpp  server.cpp  session.cpp
lib/include/: fancy_function.h  fancy_version.h
lib/network/: CMakeLists.txt
lib/network/include/: TcpClient.hpp  TcpConnection.hpp  TcpServer.hpp
lib/network/src/: TcpClient.cpp  TcpConnection.cpp  TcpServer.cpp
lib/src/: fancy_function.cpp
lib/version/: CMakeLists.txt  version.h.in
lib/version/src/: fancy_version.cpp
test/: CMakeLists.txt  test_fancy_function.cpp  test_tcp_server.cpp
test/src/: test_fancy_function.cpp
